--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,3 +1,10 @@
-body {
-  background-color: tomato;
-}
+@import "blocks/container.scss";
+@import "blocks/logo.scss";
+@import "blocks/nav.scss";
+@import "blocks/hero.scss";
+@import "blocks/reproduction.scss";
+@import "blocks/promo.scss";
+@import "blocks/team.scss";
+@import "blocks/main-footer.scss";
+@import "blocks/social.scss";
+@import "blocks/rights.scss";
