--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,3 +1,11 @@
+// Global
+
+@import "global/fonts.scss";
+@import "global/global.scss";
+@import "global/mixins.scss";
+
+// Blocks
+
 @import "blocks/container.scss";
 @import "blocks/logo.scss";
 @import "blocks/nav.scss";
@@ -8,3 +16,5 @@
 @import "blocks/main-footer.scss";
 @import "blocks/social.scss";
 @import "blocks/rights.scss";
+@import "blocks/main-header.scss";
+@import "blocks/button.scss";
