--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -1,8 +1,8 @@
 // Global
 
 @import "global/fonts.scss";
-@import "global/global.scss";
 @import "global/mixins.scss";
+@import "global/global.scss";
 
 // Blocks
 
@@ -18,3 +18,4 @@
 @import "blocks/rights.scss";
 @import "blocks/main-header.scss";
 @import "blocks/button.scss";
+@import "blocks/card.scss";
