--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -1,6 +1,12 @@
+.hero {
+  margin-bottom: 60px;
+}
+
 .hero__title {
   grid-column: 1 / -1;
   @include font-medium(30px, 30px);
+  margin: 0;
+  margin-bottom: 20px;
 
   span {
     color: #598D66;
@@ -9,12 +15,13 @@
 
 .hero__text {
   grid-column: 1 / -1;
+  margin: 0;
   @include font-medium(14px, 150%, #86928b);
+  margin-bottom: 40px;
 }
 
 .hero__button {
   grid-column: 1 / 2;
-  width: 154px;
-  padding: 15px 29px;
+  padding: 14px 29px;
   @include font-medium(18px, auto, #598d66);
 }
