--- a/source/styles/blocks/reproduction.scss
+++ b/source/styles/blocks/reproduction.scss
@@ -1,12 +1,42 @@
+.reproduction {
+  margin-bottom: 60px;
+}
+
 .reproduction__title {
+  @include font-medium(24px, 110%);
   grid-column: 1 / -1;
+  margin: 0;
 }
 
 .reproduction__countries {
   grid-column: 1 / -1;
+  margin: 19px 0;
   display: flex;
+}
+
+.reproduction__name-country {
+  padding: 10px 20px;
+  background-color: #D4E8D9;
+  border-radius: 20px;
+  margin-right: 20px;
+
+  p {
+    @include font-medium(18px, auto, #2C2D35);
+    margin: 0;
+  }
+
+  &--active {
+    background-color: #376B44;
+
+    p {
+      color: #F4F6F5;
+    }
+  }
 }
 
 .reproduction__list {
   grid-column: 1 / -1;
+  display: flex;
+  flex-direction: column;
+  gap: 29px;
 }
