--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -10,9 +10,22 @@
 }
 
 .nav__burger {
+  position: relative;
   padding: 8px 5px;
   background-color: transparent;
   border: none;
+  cursor: pointer;
+}
+
+.nav__checkbox {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  left: 0;
+  top: 0;
+  margin: 0;
+  opacity: 0;
+  cursor: pointer;
 }
 
 .nav__burger-line {
@@ -35,4 +48,41 @@
   padding: 0;
   width: 24px;
   height: 24px;
+  opacity: 1;
+  transition: opacity .5s;
+}
+
+.nav__cart--unvisible {
+  opacity: 0;
+  transition: opacity .5s;
+}
+
+.nav__link {
+  color: #2C2D35;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.nav__item:not(:last-child) {
+  margin-bottom: 50px;
+}
+
+// Для логики бургера
+
+.nav__list {
+  position: absolute;
+  padding-top: 30px;
+  transform: translateX(-150%);
+  opacity: 0.5;
+  padding: 0 0 126px 5%;
+  width: 100%;
+  background-color: #E1EDE6;
+  transition: all .5s;
+}
+
+.nav__list--visible {
+  display: block;
+  opacity: 1;
+  transform: translateX(0%);
+  transition: all .5s;
 }
